--- a/README.rmd
+++ b/README.rmd
@@ -31,7 +31,7 @@ The dymiumCore package has not been released on CRAN, but you can install from [
 
 ``` r
 # install.packages("remotes")
-remotes::install_github("dymium-org/dymium")
+remotes::install_github("dymium-org/dymiumCore")
 ```
 
 ## Tutorials
@@ -48,7 +48,8 @@ The main building blocks of microsimulation are agents, environment and models.
 
 ## Currently supported models
 
-Currently, dymiumCore we only support model objects fitted using the `caret` package.
+Currently, dymiumCore we only support model objects fitted using the `caret` package
+for Monte Carlo simulation.
 
 | Package |     Class |                                     Model types |         status |
 | ------: | --------: | ----------------------------------------------: | -------------: |
@@ -56,8 +57,16 @@ Currently, dymiumCore we only support model objects fitted using the `caret` pac
 |  mlogit |  `mlogit` |                        multinomial logit models | in-development |
 |    mlr3 | `Learner` | classification, survival, and regression models |        planned |
 
-__Note that__: data.frames and named lists can be used in the model argument of a Transition object. 
+__Note that__: rate-based models can be used for simulation as well. To use them,
+you first need to import them as  a data.frame and a named list.
 
-- If a `data.frame` is provided, it must contain a key column or keys columns and must have a column named 'prob' that must be a numeric type with values within [0,1] which represent probability values. Recently, models of type data.table have gained a new support where multiple choices can be simulated using a data.table object as a model. The data.table object should contains matching variables and two extra columns which are `probs`, a list column of numeric vectors, and `choices`, also a list column but contains character vectors.
+- If a `data.frame` is provided, it must contain a key column or keys columns and
+must have a column named 'prob' that must be a numeric type with values within [0,1]
+which represent probability values. Recently, models of type data.table have gained 
+a new support where multiple choices can be simulated using a data.table object
+as a model. The data.table object should contains matching variables and two extra
+columns which are `probs`, a list column of numeric vectors, and `choices`, also 
+a list column but contains character vectors.
 
-- A named `list` can be used to represent choices, where names of the list are choices and values are their associated probabilities. 
+- A named `list` can be used to represent choices, where names of the list are 
+choices and values are their associated probabilities. 
