docs(README): minor fix

--- a/README.rmd
+++ b/README.rmd
@@ -22,7 +22,7 @@ knitr::opts_chunk$set(
 [![Codecov test coverage](https://codecov.io/gh/dymium-org/dymiumCore/branch/master/graph/badge.svg)](https://codecov.io/gh/dymium-org/dymiumCore?branch=master)
 <!-- badges: end -->
 
-# dymiumCore: <img src="man/figures/logo.png" align="right" alt="" width="120" />
+# dymiumCore <img src="man/figures/logo.png" align="right" alt="" width="120" />
 
 **dymiumCore** is an R package which provides a toolbox for developing a microsimulation
 model that is modular and pipable. While the core focus of the package is for modelling
