--- a/README.rmd
+++ b/README.rmd
@@ -146,7 +146,7 @@ in a way that mimic bidding.
 
 Note that, the number of alternatives available to each agent is customisable to realistically 
 represent a matching situation that is being simulated. For example, in a housing
-search situation it properly would be inappropiate to assume that all relocating households 
+search situation, it might be inappropiate to assume that all relocating households 
 have perfect knowledge about all the available dwelling units that are on the market
 at any moment in time. Hence, the modeller might want to limit the number of alternatives
 available in the choiceset of each household or the number of zones that the households
