feat: allows a dynamic transition probability table in TransitionClassification #7

--- a/README.rmd
+++ b/README.rmd
@@ -90,16 +90,15 @@ a named list, and a data.frame or data.table for Monte Carlo simulation.
 |  mlogit |  `mlogit` |                        multinomial logit models | in-development |
 |    mlr3 | `Learner` | classification, survival, and regression models |        planned |
 
-__Note that__: rate-based models can be used for simulation as well. To use them,
-you first need to import them as  a data.frame and a named list.
+In microsimulation, modellers often use transition probabilities that they obtained 
+from official sources. Hence, __dymiumCore__ provides an easy step to use those
+transition probabilities in `Transition`. __A static rate model__, __a dynamic rate model__, 
+and __a enumerated choice model__ can be provided in a data.table format. When a
+data.table is provided as the model argument to `Transition`, `Transition`  will 
+figure out which of the three models the provided data.table matches based on the following criteria. 
 
-- If a `data.frame` or `data.table` is provided, it must contain a key column or keys columns and
-must have a column named 'prob' that must be a numeric type with values within [0,1]
-which represent probability values. Recently, models of type data.table have gained 
-a new support where multiple choices can be simulated using a data.table object
-as a model. The data.table object should contains matching variables and two extra
-columns which are `probs`, a list column that contains numeric vectors, and `choices`, also 
-a list column but contains character vectors.
+It is __a static rate model__, if the data.table contains a column called `prob` which is
+of type numeric with the value between 0 to 1.
 
 ```{r}
 library(data.table) # use install.packages("data.table") to install
@@ -109,7 +108,29 @@ library(data.table) # use install.packages("data.table") to install
   sex = c("male", "female"),
   prob = c(0.3, 0.2)
 ))
+```
 
+It is __a dynamic rate model__, if the provided data.table contains columns that indicate
+time periods with a prefix `t_` follow by a numeric value i.e.  `t_0`, `t_2011`, `t_2050`.
+Those time period columns must be of type numeric and the values under those columns 
+must be within 0 to 1. 
+
+```{r}
+(dynamic_rate_based_model <-
+  data.table(
+  sex = c("male", "female"),
+  prob = c(0.3, 0.2),
+  t_2010 = c(0.5, 0.2),
+  t_2011 = c(0.3, 0.1),
+  t_2012 = c(0.4, 0.3)
+))
+```
+
+It is __a choice model__, of the provided data.table contains columns that called
+`probs` and `choices` of the type list that contains numeric vectors and character
+vectors, respectively.  
+
+```{r}
 (choice_model <-
   data.table(
     sex = c('male', 'female'),
@@ -117,6 +138,14 @@ library(data.table) # use install.packages("data.table") to install
     choices = list(c('can drive', 'cannot drive'), c('can drive', 'cannot drive'))
 ))
 ```
+
+__Note that__, if more the provided data.table matches more than one of the three formats
+then `Transition` will raise an error. 
+
+__Suggestion:__  you can import transition probability tables that are in a `csv` format
+or a `.xlsx` format to R using the `fread` function from the `data.table` package or `read.csv()`
+from the `utils` package that comes preinstalled with R or `read_xlsx()` from the
+`readxl` package for xlsx files.
 
 - A named `list` can be used to represent choices, where the names of the list are 
 choices and their values are their associated probabilities. 
