--- a/README.rmd
+++ b/README.rmd
@@ -25,13 +25,11 @@ knitr::opts_chunk$set(
 
 # dymiumCore <img src="man/figures/logo.png" align="right" alt="" width="120" />
 
-**dymiumCore** is an R package which provides a toolbox for developing a microsimulation
-model that is modular and pipable. While the core focus of the package is for modelling
-urban systems, dymium can be easily extended to apply in other contexts as well.
+**dymiumCore** is an R package which provides a toolbox for developing a microsimulation model that is modular and pipable. While the core focus of the package is for modelling urban systems, dymium can be easily extended to apply in other contexts as well.
 
 ## Installation
 
-The dymiumCore package has not been released on CRAN, but you can install from [GitHub](https://github.com/) with:
+`dymiumCore` is not available on CRAN. You can install directly from GitHub using `remotes`:
 
 ```{r eval = FALSE}
 # install.packages("remotes")
@@ -40,7 +38,7 @@ remotes::install_github("dymium-org/dymiumCore")
 
 ## Documentation and Tutorials
 
-For documentation and tutorials, please check out our website at [https://core.dymium.org](https://core.dymium.org).
+For documentation and tutorials, please check our website at [https://core.dymium.org](https://core.dymium.org).
 
 ## Available modules
 
