--- a/vignettes/dymium-intro.Rmd
+++ b/vignettes/dymium-intro.Rmd
@@ -7,11 +7,12 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-```{r, include = FALSE}
+```{r setup, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
 )
+library(dymiumCore)
 ```
 
 This vignette introduces the basic building blocks of `dymiumCore`, how they can be put together to create a microsimulation model, and how to take advantage of existing modules from  the [dymiumModules](https://github.com/dymium-org/dymiumModules) repository. 
@@ -171,32 +172,44 @@ that are their unlikely matches.
 
 ### Logging
 
-dymium uses the `lgr` package for logging internally in the base code. By default, 
-only log messages with `warn` level or higher will be displayed in the R console. 
-The users are also encourage to use the same logger object that is used internally 
-to create additional logging messages. The same logger may be used for logging of simulation
-results. To log a simulation result, use `lg$info()` and use `SIM_OUTPUT` as value 
-in the msg argument.
+There are a few ways that you can log in dymium. To choose which of the logging methods is suitable a situation please consider the following. Please note that, this subsection is only to give a brief overview of the methods so please see its documentation for more details.
 
-```{r}
-dymiumCore:::lg$info("SIM_OUTPUT", desc = "number_of_individuals", value = 1000)
-```
+#### Logging with `lgr`
 
-Note that, the first argument of `lg$info()` is `msg` and you 
-do not have to specify that (i.e. `lg$info(msg = "SIM_OUTPUT"`)) otherwise you 
-will get the following error.
-
-```r
-[2020-01-06 07:28:40.881] An error occurred during logging: Error in .subset2(public_bind_env, "initialize")(...): formal argument "msg" matched by multiple actual arguments
-```
-
-To access the log data of your simulation results use the following command.
+The `lgr` package is used by dymiumCore internally. This sometimes give warnings on the console. You can also see lower-level log messages if you change the log threshold.
 
 ```{r, eval = FALSE}
-dymiumCore:::lg$appenders$buff$appenders$sim_output$data
+dymiumCore:::lg$set_threshold("info")
+dymiumCore:::lg$set_threshold("trace")
 ```
+
+The default threshold for is set to `warn` which only shows warning messages and above (i.e. debug, fatal). As you can see, the internal logger is not exported hence it is not meant to be used by the end-user.
+
+`lgr` is also used in dymium modules. If you create a new module using `use_module()` a lgr logger will be available for you to use within your event functions, see `logger.R` in your module folder.
+
+There are many powerful stuffs you can do with `lgr` and to learn more about it please see its [vignette](https://s-fleck.github.io/lgr/articles/lgr.html). 
+
+#### Logging with `Generic$log()`
+
+All classes that inherit `Generic`, namely `Entity` and `Container`, have the `log()` method available to them. The main purpose of this function is to give the user a convinient way to log simulation outputs. `get_log()` can be used on objects that have the `$log()` method to gather all logs.
+
 ```{r}
-#>   level           timestamp     logger caller        msg                  desc     value
-#> 1   400 2020-01-06 07:29:49 dymiumCore   eval SIM_OUTPUT number_of_individuals      1000
+create_toy_world()
+total_no_individuals <- world$entities$Individual$n()
+world$entities$Individual$log(desc = "total_no_individuals", value = total_no_individuals)
+get_log(world)
+```
+
+#### Logging with `add_history()`
+
+`add_history()` has a more specific used and only applicable to `Entity`, it is meant to be used for logging of past events that occur to each entity. This is particularly useful when past actions of entities can influence their current and future actions. There are helper functions to get and combine histories such as `get_history()` and `combine_histories()`.
+
+```{r}
+create_toy_world()
+add_history(entity = world$entities$Individual, ids = 1:3, event = "marriage")
+get_history(x = world$entities$Individual)
+# alternatively you can use insepct to view the attribute data of the individuals
+# and their history data at the same time
+inspect(entity = world$entities$Individual, ids = 1:3)
 ```
 
