docs: update the intro vignette's format

--- a/vignettes/dymium-intro.Rmd
+++ b/vignettes/dymium-intro.Rmd
@@ -22,16 +22,16 @@ library(dymiumCore)
 
 This vignette introduces the basic building blocks of `dymiumCore`, how they can be put together to create a microsimulation model, and how to take advantage of existing modules from  the [dymiumModules](https://github.com/dymium-org/dymiumModules) repository. 
 
-## Microsimulation modelling using `dymiumCore`
+# Microsimulation modelling using `dymiumCore`
 
 Microsimulation models, regardless of their study contexts, generally share the same basic components which are agents or entities, rules and market interactions.
 
-## Overview of the building blocks 
+# Overview of the building blocks 
 
 An implementation of a microsimulation model usually consists of these three 
 components which are entity, transition and market.
 
-### Entities
+## Entities
 
 Entities can be persons, firms, buildings, zones, transport network etc. They
 can be conviniently defined as a class, based on the concept of 'objects' in 
@@ -41,7 +41,7 @@ gender, marital status. A person give birth, leave parental home, etc.  While
 a household may have household size, household id, number of vehicles owned as
 its fields. A household can relocate, have new members and etc.
 
-### Transition
+## Transition
 
 In a microsimulation model, entities are given rules for them to follow under 
 different conditions. A rule can simply be an ifelse statement such as:
@@ -139,7 +139,7 @@ In a binary choice model, it is recommended that the outcome variable should be
 coded as "yes" and "no" as many of the modules available at [dymium-org/dymiumModules](https://github.com/dymium-org/dymiumModules)
 use with this convention.
 
-### Market
+## Market
 
 In microsimulation, a market is where entities are directly interact with one another.
 A market can be an abstraction of a real-estate bidding market, a mate matching market,
@@ -175,11 +175,11 @@ into sub markets where agents that are more alike or geographically near one oth
 are stratified into the same sub market and only aware of each others and not those
 that are their unlikely matches.
 
-### Logging
+## Logging
 
 There are a few ways that you can log in dymium. To choose which of the logging methods is suitable in your please consider the following. Please note that, this subsection is only to give a brief overview of the methods so please see its documentation for more details.
 
-#### Logging with `lgr`
+### Logging with `lgr`
 
 The `lgr` package is used by dymiumCore internally. This sometimes give warnings on the console. You can also see lower-level log messages if you change the log threshold.
 
@@ -194,7 +194,7 @@ The default threshold for is set to `warn` which only shows warning messages and
 
 There are many powerful stuffs you can do with `lgr` and to learn more about it please see its [vignette](https://s-fleck.github.io/lgr/articles/lgr.html). 
 
-#### Logging with `Generic$log()`
+### Logging with `Generic$log()`
 
 All classes that inherit `Generic`, namely `Entity` and `Container`, have the `log()` method available to them. The main purpose of this function is to give the user a convinient way to log simulation outputs. `get_log()` can be used on objects that have the `$log()` method to gather all logs.
 
@@ -205,7 +205,7 @@ world$entities$Individual$log(desc = "total_no_individuals", value = total_no_in
 get_log(world)
 ```
 
-#### Logging with `add_history()`
+### Logging with `add_history()`
 
 `add_history()` has a more specific used and only applicable to `Entity`, it is meant to be used for logging of past events that occur to each entity. This is particularly useful when past actions of entities can influence their current and future actions. There are helper functions to get and combine histories such as `get_history()` and `combine_histories()`.
 
