--- a/vignettes/residential-mobility.Rmd
+++ b/vignettes/residential-mobility.Rmd
@@ -17,7 +17,8 @@ knitr::opts_chunk$set(
   out.width = '100%',
   fig.align = "center", 
   fig.width =  7,
-  dpi = 150
+  dpi = 150,
+  warning = FALSE
 )
 ```
 
@@ -64,10 +65,53 @@ To make this model simple, the following assumptions were made.
 
 Here is the map of all the zones in this example. 
 
-```{r,  fig.align = "center", fig.asp = 1, fig.width = 7}
-ggplot(toy_zones) +
-  geom_sf(aes(fill = albers_sqm)) +
-  geom_sf_label(aes(label = rownames(toy_zones)))
+<!-- ```{r,  fig.align = "center", fig.asp = 1, fig.width = 7} -->
+<!-- ggplot(toy_zones) + -->
+<!--   geom_sf(aes(fill = albers_sqm)) + -->
+<!--   geom_sf_label(aes(label = rownames(toy_zones))) -->
+<!-- ``` -->
+
+
+```{r,  fig.align = "center", echo = FALSE, fig.cap="Melbourne CBD, Australia", warning=FALSE}
+# set seed for reproducible widget id
+if (requireNamespace("htmltools", quietly = TRUE)) {
+  htmlwidgets::setWidgetIdSeed(42)
+}
+
+library(leaflet)
+library(sf)
+
+centers <- toy_zones %>%
+  sf::st_centroid()
+
+leaflet() %>%
+  addTiles() %>%
+  setView(lat = -37.808, lng = 144.952, zoom = 12) %>%
+  addPolygons(
+    data = toy_zones,
+    color = "#444444",
+    weight = 1,
+    smoothFactor = 0.5,
+    opacity = 1.0,
+    fillOpacity = 0.5,
+    fillColor = ~ colorQuantile("BuPu", albers_sqm)(albers_sqm), 
+    highlightOptions = highlightOptions(
+      color = "white",
+      weight = 2,
+      bringToFront = TRUE
+    )
+  ) %>%
+  addLabelOnlyMarkers(
+    data = centers,
+    label = ~ zid,
+    labelOptions = labelOptions(
+      noHide = TRUE,
+      direction = 'top',
+      # textOnly = TRUE,
+      textsize = 5
+    )
+  )
+
 ```
 
 Here is the list of queen contiguity of the zones.
@@ -245,46 +289,46 @@ count <- merge(count, toy_zones, by = "zid") %>%
 
 As a spatial plot..
 
-<!-- # ```{r, warning=FALSE}  -->
-<!-- # anim <- -->
-<!-- #   ggplot(count) + -->
-<!-- #   geom_sf(aes(fill = count)) + -->
-<!-- #   geom_sf_label(aes(label = sa2_name11)) + -->
-<!-- #   # Here come the gganimate specific bits -->
-<!-- #   labs(title = "Spatial distribution of households",  -->
-<!-- #        subtitle = "Iteration: {frame_time}") + -->
-<!-- #   scale_fill_viridis_c(option = "B") + -->
-<!-- #   transition_time(iteration) -->
-<!-- # animate(anim, width = 800, height = 800, res = 100) -->
-<!-- # ``` -->
+```{r, warning=FALSE}
+anim <-
+ ggplot(count) +
+ geom_sf(aes(fill = count)) +
+ geom_sf_label(aes(label = sa2_name11)) +
+ # Here come the gganimate specific bits
+ labs(title = "Spatial distribution of households",
+      subtitle = "Iteration: {frame_time}") +
+ scale_fill_viridis_c(option = "B") +
+ transition_time(iteration)
+animate(anim, width = 800, height = 800, res = 100)
+```
 
-<!-- ```{r gapgif, fig.show='animate', ffmpeg.format='gif', dev='jpeg', fig.asp = 1, fig.align = "center", fig.width =  7, message=FALSE, warning=FALSE} -->
-<!-- plots <- purrr::map(1:10, ~ { -->
-<!--   ggplot(subset(count, iteration == .x)) + -->
-<!--     geom_sf(aes(fill = count)) + -->
-<!--     geom_sf_label(aes(label = sa2_name11)) + -->
-<!--     # Here come the gganimate specific bits -->
-<!--     scale_fill_viridis_c(option = "B", limits = c(0,28)) + -->
-<!--     labs(title = "Spatial distribution of households",  -->
-<!--          subtitle = paste0("Iteration: ", .x)) -->
-<!-- }) -->
-<!-- purrr::walk(plots, print) -->
-<!-- ``` -->
+```{r gapgif, fig.show='animate', ffmpeg.format='gif', dev='jpeg', fig.asp = 1, fig.align = "center", fig.width =  7, message=FALSE, warning=FALSE}
+plots <- purrr::map(1:10, ~ {
+  ggplot(subset(count, iteration == .x)) +
+    geom_sf(aes(fill = count)) +
+    geom_sf_label(aes(label = sa2_name11)) +
+    # Here come the gganimate specific bits
+    scale_fill_viridis_c(option = "B", limits = c(0,28)) +
+    labs(title = "Spatial distribution of households",
+         subtitle = paste0("Iteration: ", .x))
+})
+purrr::walk(plots, print)
+```
 
-<!-- As a time series plot.. -->
+As a time series plot..
 
-<!-- ```{r} -->
-<!-- anim <-  -->
-<!--   ggplot(count, aes(iteration, count, group = sa2_name11)) + -->
-<!--   geom_line() +  -->
-<!--   geom_segment(aes(xend = 10, yend = count), linetype = 2, colour = 'grey') +  -->
-<!--   geom_point(size = 2) +  -->
-<!--   geom_text(aes(x = 10.1, label = sa2_name11), hjust = 0) +  -->
-<!--   coord_cartesian(clip = 'off') +  -->
-<!--   transition_reveal(iteration) +  -->
-<!--   theme_minimal() +  -->
-<!--   labs(title = "Counts of households by zones") + -->
-<!--   theme(plot.margin = margin(5.5, 40, 5.5, 5.5)) -->
-<!-- animate(anim, width = 800, height = 600, res = 100) -->
-<!-- ``` -->
+```{r}
+anim <-
+  ggplot(count, aes(iteration, count, group = sa2_name11)) +
+  geom_line() +
+  geom_segment(aes(xend = 10, yend = count), linetype = 2, colour = 'grey') +
+  geom_point(size = 2) +
+  geom_text(aes(x = 10.1, label = sa2_name11), hjust = 0) +
+  coord_cartesian(clip = 'off') +
+  transition_reveal(iteration) +
+  theme_minimal() +
+  labs(title = "Counts of households by zones") +
+  theme(plot.margin = margin(5.5, 40, 5.5, 5.5))
+animate(anim, width = 800, height = 600, res = 100)
+```
 
